# blog_v2

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: ci.yml
blog-cli/: Cargo.toml
blog-cli/src/: cli.rs  config.rs  main.rs  output.rs  token_store.rs
blog-client/: Cargo.toml
blog-client/src/: errors.rs  grpc_client.rs  http_client.rs  lib.rs  main.rs  models.rs  transport.rs
blog-migration/: Cargo.toml
blog-migration/src/: lib.rs  m20260715_000001_create_table.rs  main.rs
blog-proto/: Cargo.toml  build.rs
blog-proto/proto/: blog.v1.proto
blog-proto/src/: lib.rs
blog-server/: Cargo.toml
blog-server/src/: main.rs
blog-server/src/application/: auth_service.rs  blog_service.rs  mod.rs
blog-server/src/application/ports/: mod.rs  password_hasher.rs  post_repository.rs  token_service.rs  user_repository.rs
blog-server/src/domain/: errors.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: config.rs  database.rs  mod.rs  server.rs  telemetry.rs
blog-server/src/infrastructure/http/: cors.rs  errors.rs  headers.rs  mod.rs
blog-server/src/infrastructure/persistence/: errors.rs  mappers.rs  mod.rs
blog-server/src/infrastructure/persistence/entities/: mod.rs  post.rs  user.rs
blog-server/src/infrastructure/persistence/repositories/: mod.rs  sea_orm_post_repository.rs  sea_orm_user_repository.rs
blog-server/src/infrastructure/security/: argon2_password_hasher.rs  errors.rs  jwt_token_service.rs  mod.rs
blog-server/src/presentation/: auth.rs  dto.rs  errors.rs  mod.rs
blog-server/src/presentation/dto/: auth.rs  mod.rs  post.rs
blog-server/src/presentation/handlers/: auth.rs  grpc.rs  mod.rs  posts.rs  protected.rs
blog-server/src/presentation/middlewares/: jwt_auth.rs  mod.rs
blog-wasm/: Cargo.toml
blog-wasm/public/assets/: main.css
blog-wasm/src/: api.rs  app.rs  errors.rs  lib.rs  main.rs  models.rs  session.rs  storage.rs  validation.rs
blog-wasm/src/components/: auth.rs  mod.rs  notification.rs  posts.rs  status.rs
scripts/: seed_dev_data.sql
