[workspace]
members = [
    "blog-cli",
    "blog-server",
    "blog-client",
    "blog-wasm"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = "warn"
perf = "warn"

