[workspace]
members = [
    "blog-cli",
    "blog-server",
    "blog-client",
    "blog-wasm",
    "blog-proto",
    "blog-migration"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = "warn"
perf = "warn"

[workspace.dependencies]
blog-proto = { path = "blog-proto" }
prost = "0.14"
tonic = "0.14"
tonic-reflection = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
serde_json = "1"
actix-web = "4"
actix-cors = "0.7"
sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid"
] }
sea-orm-migration = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-uuid"
] }
async-trait = "0.1"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
anyhow = "1"
dotenvy = "0.15"
validator = "0.20"
futures-util = "0.3"
actix-web-httpauth = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
