[package]
name = "blog-wasm"
version.workspace = true
edition.workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]

[lints]
workspace = true

[dependencies]
base64.workspace = true
dioxus.workspace = true
serde.workspace = true
serde_json.workspace = true
gloo-net.workspace = true
thiserror.workspace = true
gloo-storage.workspace = true